--- a/app/src/main/res/menu/activity_main_drawer_stuff.xml
+++ b/app/src/main/res/menu/activity_main_drawer_stuff.xml
@@ -16,6 +16,11 @@
             android:title="@string/menu_stock" />
 
         <item
+            android:id="@+id/nav_in_out_stock"
+            android:icon="@drawable/ic_shopping_basket_24"
+            android:title="@string/in_out" />
+
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings_24"
             android:title="@string/menu_settings" />
